# hideandseek

./: .gitignore  CMakeLists.txt  justfile  why-i-didnt-use-cmake.txt
libs/: attribution.md
libs/tinyfiledialogs/macos-arm64/: tinyfiledialogs.dylib
libs/tinyfiledialogs/windows/: tinyfiledialogs.lib
src/: assets.cpp  assets.hpp  assets.odin  biterator.hpp  bitset.hpp  clay.cpp  clay.hpp  collider.cpp  collider.hpp  collider.odin  components.hpp  components.odin  connection_scene.odin  editor_scenes.cpp  editor_scenes.hpp  editor_scenes.odin  entities.cpp  entities.hpp  entity.cpp  entity.hpp  entity.odin  filedialog.cpp  filedialog.hpp  filedialog.odin  game.cpp  game.hpp  game.odin  game_scene.odin  main.cpp  main.odin  network.odin  player.cpp  player.hpp  player.odin  reader.cpp  reader.hpp  scenes.cpp  scenes.hpp  scenes.odin  serialization_test_scene.cpp  (+14 more)
src/client/: main.odin
src/common/: constants.odin  enums.odin  packets.odin
src/server/: main.odin
src/ui/: clay_renderer.odin  default_styles.odin  modal.odin  text_input.odin  ui.odin
